ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyNameES6_2/input.ts.stderr
error[1005]: Expected a property name
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyNameES6_2/input.ts:3:5
  |
3 |     `abc${ 123 }def${ 456 }ghi`: 321
  |     ^

